Updated version and port

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ontotext/graphdb:latest
+FROM ontotext/graphdb:10.6.4
 
 # Add custom setup or configurations, e.g., installing dependencies
 # RUN apt-get update && apt-get install -y some-package
@@ -7,5 +7,5 @@ FROM ontotext/graphdb:latest
 # COPY ./config/ /opt/graphdb/config/
 
 # Expose ports and set environment variables if needed
-EXPOSE 7200
-ENV GRAPHDB_HOME=/opt/graphdb
+EXPOSE 8000
+ENV GRAPHDB_HOME=/opt/graphdb/home
