--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,15 +1,19 @@
-version: "3"
-
 services:
   graphdb:
-    image: ontotext/graphdb-free:9.8.0
+    image: ontotext/graphdb:10.6.4
     container_name: graphdb
     ports:
-      - "7200:7200"
+      - "8000:7200"
+    restart: always
+    environment:
+      - GRAPHDB_HOME=/opt/graphdb/home
+    deploy:
+      resources:
+        limits:
+          memory: 4g
+          cpus: '2'
     volumes:
       - ./data:/opt/graphdb/data
-    environment:
-      - GRAPHDB_HOME=/opt/graphdb
     networks:
       - graphdb_network
 
