--- a/framework/src/config.yaml
+++ b/framework/src/config.yaml
@@ -1,7 +1,10 @@
 graphdb:
   url: "http://localhost:8000/repositories/network/statements"
-  ttl_output: "plugins/mine-sweeper/data/graph_data.ttl"
 
 plugins:
-  enabled: ["mine_sweeper"]
-  path: "plugins/mine-sweeper/src"
+  enabled:
+    - name: "mine_sweeper"
+      ttl_output: "plugins/mine-sweeper/data/graph_data.ttl"
+    - name: "another_plugin"
+      ttl_output: "plugins/another-plugin/data/transformed_data.ttl"
+  path: "plugins"
